--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "require": {
         "php": ">=7.1.0",
         "silverstripe/recipe-plugin": "^1.2",
-        "silverstripe/recipe-cms": "4.x-dev",
-        "silverstripe/login-forms": "4.x-dev"
+        "silverstripe/recipe-cms": "4.6.x-dev",
+        "silverstripe/login-forms": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
