--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,12 @@
         "sminnee/phpunit-mock-objects": "^3.4.5"
     },
     "extra": {
+        "expose": [
+            "themes/orbit/dist/js",
+            "themes/orbit/dist/style",
+            "themes/orbit/dist/favicons",
+            "themes/orbit/files"
+        ],
         "project-files": [
             "app/_config/*"
         ],
