--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,14 @@
         "php": ">=7.1.0",
         "silverstripe/recipe-plugin": "^1.2",
         "silverstripe/recipe-cms": "^4.6",
-        "silverstripe/login-forms": "^4.1.2"
+        "silverstripe/login-forms": "^4.1",
+        "dnadesign/silverstripe-elemental": "^4",
+        "axllent/silverstripe-bootstrap-forms": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
-        "sminnee/phpunit-mock-objects": "^3.4.5"
+        "symbiote/silverstripe-phpstan": "^4.0",
+        "phpstan/phpstan-shim": "^0.11",
     },
     "extra": {
         "expose": [
@@ -21,15 +24,23 @@
         ],
         "project-files": [
             "app/_config/*",
+            "app/tests/*",
             "themes/orbit/*"
         ],
         "public-files": [
-            "assets/*"
+            "assets/*",
+            "favicon.ico"
         ],
         "resources-dir": "_resources"
     },
     "config": {
         "process-timeout": 600
+    },
+    "scripts": {
+        "phpcs": "~/.composer/vendor/bin/phpcs app/",
+        "phpcbf": "~/.composer/vendor/bin/phpcbf app/",
+        "phpstan": "vendor/bin/phpstan analyse app/src --memory-limit=1G -c phpstan.neon -a vendor/symbiote/silverstripe-phpstan/bootstrap.php --no-ansi --level 4",
+        "phpunit": "vendor/bin/phpunit app/tests/"
     },
     "prefer-stable": true,
     "minimum-stability": "dev"
