--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "symbiote/silverstripe-phpstan": "^4.0",
-        "phpstan/phpstan-shim": "^0.11",
+        "phpstan/phpstan-shim": "^0.11"
     },
     "extra": {
         "expose": [
