--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         "axllent/silverstripe-bootstrap-forms": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^5.7 <6",
         "symbiote/silverstripe-phpstan": "^4.0",
-        "phpstan/phpstan-shim": "^0.11"
+        "phpstan/phpstan-shim": "^0.11 <0.12"
     },
     "extra": {
         "expose": [
